# pdffff

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  deep-research-report.md
benches/: bigram_build.rs  literal_search.rs
docs/: architecture.md  cli.md  index.html  style.css
src/: app.rs  bigram.rs  bigram_query.rs  bitset.rs  db.rs  extract.rs  index.rs  lib.rs  main.rs  normalize.rs  paths.rs  query.rs  scanner.rs  tui.rs  watcher.rs
src/app/: coordinator.rs  db_path.rs  handle.rs  mod.rs  options.rs  writer.rs
src/index/: base.rs  chunk.rs  mod.rs  overlay.rs  state.rs
src/query/: candidate.rs  fuzzy.rs  literal.rs  mod.rs  rank.rs  regex.rs  snippet.rs  walk.rs
src/tui/: keys.rs  layout.rs  mod.rs  palette.rs  render.rs  term.rs
src/ui/: gui.rs  highlight.rs  input.rs  launch.rs  mod.rs  search.rs  spinner.rs
src/ui/gui/: keys.rs  mod.rs  paint.rs  palette.rs  render.rs  style.rs
tests/: failure_modes.rs  index_pipeline.rs  search_pipeline.rs  success_criteria.rs  watch_pipeline.rs
tests/common/: mod.rs
