[package]
name = "pdffff"
version = "0.1.0"
edition = "2021"
description = "Durable, fast PDF folder search via pdftotext + SQLite + in-memory bigram index"
license = "MIT"
repository = "https://github.com/lambdabetaeta/pdffff"
readme = "README.md"
keywords = ["pdf", "search", "fulltext", "fuzzy"]
categories = ["text-processing"]

[[bin]]
name = "pdffff"
path = "src/main.rs"

[[bin]]
name = "pdffff-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[lib]
name = "pdffff"
path = "src/lib.rs"

[features]
default = []
# Win98/NT-flavoured cross-platform desktop GUI. Mirrors the TUI on top
# of the shared `crate::ui` kernel. Off by default so a headless build
# (e.g. CI without X/Wayland dev libs) doesn't drag in eframe + winit.
gui = ["dep:eframe"]

[dependencies]
# Durable store
rusqlite = { version = "0.32", features = ["bundled"] }

# Concurrency primitives
arc-swap   = "1.7"
parking_lot = "0.12"
flume      = "0.11"
rayon      = "1.10"

# Filesystem
ignore                = "0.4"
notify                = "8"
notify-debouncer-full = "0.5"

# Pattern matching
regex        = "1"
regex-syntax = "0.8"
memchr       = "2"
aho-corasick = "1"

# Normalization
deunicode = "1"

# Fuzzy scoring (the scorer fff uses)
neo_frizbee = "0.10"

# Hashing for content signatures (optional but the report names it)
blake3 = "1"

# Argument parsing & errors
clap   = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"

# Per-corpus DB location: $XDG_DATA_HOME (or platform equivalent)
dirs = "5"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time / printing
humantime = "2"

# TUI
ratatui   = "0.29"
crossterm = "0.28"

# GUI (optional, behind `gui` feature). `default-features = false` to
# drop accesskit (we don't need screen-reader integration yet) and pick
# the lean glow renderer instead of wgpu.
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"], optional = true }

[dev-dependencies]
tempfile    = "3"
printpdf    = "0.7"
criterion   = "0.5"
rand_chacha = "0.3"
rand        = "0.8"

[[bench]]
name = "literal_search"
harness = false

[[bench]]
name = "bigram_build"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
